// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders an Icon component with all props 1`] = `
.c3 {
  padding-bottom: 100%;
}

.c1 {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.c1 > *:not(.c2) {
  position: absolute;
  left: 0;
  width: 100%;
  min-height: 100%;
  top: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c4 {
  fill: currentColor;
}

<Icon
  asset="Heart"
  fillParent={true}
>
  <styled.div
    className="tw-icon"
    fillParent={true}
  >
    <div
      className="c0 tw-icon"
    >
      <Aspect
        align={3}
        overflow={false}
        ratio="tw-aspect--1x1"
      >
        <styled.div
          align={3}
          allowOverflow={false}
          className="tw-aspect"
        >
          <div
            className="c1 tw-aspect"
          >
            <styled.div
              ratio={1}
            >
              <div
                className="c2 c3"
              />
            </styled.div>
            <styled.svg
              height="100%"
              version="1.1"
              viewBox="0 0 20 20"
              width="100%"
              x="0px"
              y="0px"
            >
              <svg
                className="c4"
                height="100%"
                version="1.1"
                viewBox="0 0 20 20"
                width="100%"
                x="0px"
                y="0px"
              >
                <g>
                  <path
                    clipRule="evenodd"
                    d="M9.171 4.171A4 4 0 006.343 3H6a4 4 0 00-4 4v.343a4 4 0 001.172 2.829L10 17l6.828-6.828A4 4 0 0018 7.343V7a4 4 0 00-4-4h-.343a4 4 0 00-2.829 1.172L10 5l-.829-.829z"
                    fillRule="evenodd"
                  />
                </g>
              </svg>
            </styled.svg>
          </div>
        </styled.div>
      </Aspect>
    </div>
  </styled.div>
</Icon>
`;

exports[`Icon renders an Icon component with deprecated fill prop 1`] = `
.c3 {
  padding-bottom: 100%;
}

.c1 {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.c1 > *:not(.c2) {
  position: absolute;
  left: 0;
  width: 100%;
  min-height: 100%;
  top: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.c4 {
  fill: currentColor;
}

<Icon
  asset="Heart"
  fill={true}
>
  <styled.div
    className="tw-icon"
    fillParent={true}
  >
    <div
      className="c0 tw-icon"
    >
      <Aspect
        align={3}
        overflow={false}
        ratio="tw-aspect--1x1"
      >
        <styled.div
          align={3}
          allowOverflow={false}
          className="tw-aspect"
        >
          <div
            className="c1 tw-aspect"
          >
            <styled.div
              ratio={1}
            >
              <div
                className="c2 c3"
              />
            </styled.div>
            <styled.svg
              height="100%"
              version="1.1"
              viewBox="0 0 20 20"
              width="100%"
              x="0px"
              y="0px"
            >
              <svg
                className="c4"
                height="100%"
                version="1.1"
                viewBox="0 0 20 20"
                width="100%"
                x="0px"
                y="0px"
              >
                <g>
                  <path
                    clipRule="evenodd"
                    d="M9.171 4.171A4 4 0 006.343 3H6a4 4 0 00-4 4v.343a4 4 0 001.172 2.829L10 17l6.828-6.828A4 4 0 0018 7.343V7a4 4 0 00-4-4h-.343a4 4 0 00-2.829 1.172L10 5l-.829-.829z"
                    fillRule="evenodd"
                  />
                </g>
              </svg>
            </styled.svg>
          </div>
        </styled.div>
      </Aspect>
    </div>
  </styled.div>
</Icon>
`;

exports[`Icon renders an Icon component with required props 1`] = `
.c3 {
  padding-bottom: 100%;
}

.c1 {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.c1 > *:not(.c2) {
  position: absolute;
  left: 0;
  width: 100%;
  min-height: 100%;
  top: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2rem;
  width: 2rem;
}

.c4 {
  fill: currentColor;
}

<Icon
  asset="Heart"
>
  <styled.div
    className="tw-icon"
  >
    <div
      className="c0 tw-icon"
    >
      <Aspect
        align={3}
        overflow={false}
        ratio="tw-aspect--1x1"
      >
        <styled.div
          align={3}
          allowOverflow={false}
          className="tw-aspect"
        >
          <div
            className="c1 tw-aspect"
          >
            <styled.div
              ratio={1}
            >
              <div
                className="c2 c3"
              />
            </styled.div>
            <styled.svg
              height="100%"
              version="1.1"
              viewBox="0 0 20 20"
              width="100%"
              x="0px"
              y="0px"
            >
              <svg
                className="c4"
                height="100%"
                version="1.1"
                viewBox="0 0 20 20"
                width="100%"
                x="0px"
                y="0px"
              >
                <g>
                  <path
                    clipRule="evenodd"
                    d="M9.171 4.171A4 4 0 006.343 3H6a4 4 0 00-4 4v.343a4 4 0 001.172 2.829L10 17l6.828-6.828A4 4 0 0018 7.343V7a4 4 0 00-4-4h-.343a4 4 0 00-2.829 1.172L10 5l-.829-.829z"
                    fillRule="evenodd"
                  />
                </g>
              </svg>
            </styled.svg>
          </div>
        </styled.div>
      </Aspect>
    </div>
  </styled.div>
</Icon>
`;
